Update Index File

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Events and Certifications</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +48,7 @@
                         <a href="mailto:faccobruno98@gmail.com">faccobruno98@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a student of engineering who work in differents areas like eletrical circuits, control, PCBs, embedded systems, 
-                        programattion, 3D Modeling, tests and validation, machine and equipment development, programmer and Data Sciencts at John Deere - Montenegro - BR.   
+                        programattion, 3D Modeling, tests and validation, machine and equipment development. Currently I am intern at John Deere - Montenegro - BR.   
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/bruno-facco-almeida-8b8a6319b/"><i class="fab fa-linkedin-in"></i></a>
@@ -62,35 +62,35 @@
                     <h2 class="mb-5">Experiences</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Researcher</h3>
+                            <h3 class="mb-0">Research</h3>
                             <div class="subheading mb-3">GEDRE - Smart in Lightning</div>
                             <p>Development of circuits to instrument and control LEDs applied in Circadian Illumination, development of mobile apps and
-                                to creat a user interface and control the lighting, development of conversors to supply the LED system and the modelling and control
-                                of the conversor.</p>
+                                to creat a user interface and control the lighting, development of a converter to supply the LED system and the modelling and control
+                                of the converter.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2018 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Circuit Developer and Instrumentation</h3>
+                            <h3 class="mb-0">Circuit Developer, Tests and Instrumentation</h3>
                             <div class="subheading mb-3">BOMBAJA UFSM</div>
-                            <p>Development of circuits boards, instrumentations, tests and validation of a BAJA SAE Off Road prototype.</p>
+                            <p>Development of circuits boards, instrumentation, tests and validation of a BAJA SAE Off Road prototype.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2020 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Consultant and Manager Project</h3>
+                            <h3 class="mb-0">Consultant and Project Manager</h3>
                             <div class="subheading mb-3">MOTORA JUNIOR UFSM</div>
-                            <p>Work in Jr Company that develop solutions to improve the production of industries with concepts of machine. Aplication of tools to improve the time and efficiency with aplication of kambam and Scrum metodology.</p>
+                            <p>Work in Jr Company that develop solutions to improve the production of industries with machine concepts. Application of tools to improve the time and efficiency with aplication of kambam and Scrum metodology.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - April 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Programmer and Data Analyst</h3>
+                            <h3 class="mb-0">Intern</h3>
                             <div class="subheading mb-3">John Deere - Montenegro - BR</div>
-                            <p>Work at the TRACE Team who works to develop Expert Alerts to monitoring the tractor and creating a predictive maintenance.</p>
+                            <p>Work as Engineering Intern at the Customer Support Team where I develop models and algorithms with Python, SQL and PySpark and data analysis to monitoring data from tractors and creating a predictive maintenance avoiding failures in the field and problems with the customer.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2021 - Present</span></div>
                     </div>
@@ -106,7 +106,6 @@
                             <h3 class="mb-0">Federal University of Santa Maria</h3>
                             <div class="subheading mb-3">Bachelor of engineering</div>
                             <div>Control and Automation Engineering</div>
-                            <p>GPA: 3.23</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2016 - August 2022</span></div>
                     </div>
@@ -115,9 +114,8 @@
                             <h3 class="mb-0">Technician School of Santa Maria</h3>
                             <div class="subheading mb-3">Technician Degree</div>
                             <div>Industrial Automation Technician</div>
-                            <p>GPA: 3.56</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -130,9 +128,6 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
                         <li class="list-inline-item"><i class="fas fa-database"></i></li>
@@ -165,7 +160,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I am a eternal curious in new things, every week a try to learn something new, do some new course, read a new book. On the moment I am improving my knowledge in data science, to explore the world of machine learning and process data.</p>
+                    <p>I am a eternal curious in new things, every week a try to learn something new, do some new course, read a new book. On the moment I am improving my knowledge in data science, to explore the world of machine learning and data analysis.</p>
                     <p class="mb-0">In my extra time, I like to ride a bicycle, like to read fiction and history books, to watch movies and series, but nowadays a prefer documentaries.</p>
                 </div>
             </section>
@@ -193,6 +188,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Data Science Certification: IBM - Coursera
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             White Belt Formation - RL System
                         </li>
                         <li>
@@ -207,11 +206,15 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            CBA 2020 - Porto Alegre - RS
+                            CBA 2020 - Porto Alegre - RS - BR
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            SEPOC 2021 - Santa Maria - RS
+                            SEPOC 2021 - Santa Maria - RS - BR
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            COBEP 2021 - João Pessoa - PB - BR
                         </li>
                     </ul>
                 </div>
